Update tests after review.

--- a/tests/plugins/tableselection/integrations/tabletools/columndeletion.html
+++ b/tests/plugins/tableselection/integrations/tabletools/columndeletion.html
@@ -1,12 +1,12 @@
 <textarea id="table-1">
 <table>
 	<tr>
-		<td>fo^o</td>
+		<td>[foo]</td>
 		<td>bar</td>
 		<td>baz</td>
 	</tr>
 	<tr>
-		<td>foo</td>
+		<td>[foo]</td>
 		<td>bar</td>
 		<td>baz</td>
 	</tr>
@@ -35,8 +35,8 @@
 	</tr>
 	<tr>
 		<td>foo</td>
-		<td>b[ar</td>
-		<td>ba]z</td>
+		<td>[bar</td>
+		<td>baz]</td>
 	</tr>
 	<tr>
 		<td>foo</td>
@@ -65,7 +65,7 @@
 	<thead>
 		<tr>
 			<th colspan="2" scope="col">
-				He[ad]er1
+				[Header1]
 			</th>
 			<th colspan="1" scope="col">
 				Header2
@@ -126,7 +126,7 @@
 	<tr>
 		<td>foo</td>
 		<td>bar</td>
-		<td>b^az</td>
+		<td>[baz]</td>
 	</tr>
 	<tr>
 		<td>foo</td>
@@ -198,8 +198,8 @@
 	<tr>
 		<td>foo</td>
 		<td>bar</td>
-		<td>b[az</td>
-		<td>fo]o</td>
+		<td>[baz</td>
+		<td>foo]</td>
 		<td>bar</td>
 		<td>baz</td>
 	</tr>
@@ -257,25 +257,25 @@
 		<td>foo</td>
 		<td>bar</td>
 		<td>baz</td>
-		<td>fo[o</td>
+		<td>[foo</td>
 		<td>bar</td>
-		<td>b]az</td>
+		<td>baz]</td>
 	</tr>
 	<tr>
 		<td>foo</td>
 		<td>bar</td>
 		<td>baz</td>
-		<td>foo</td>
+		<td>[foo</td>
 		<td>bar</td>
-		<td>baz</td>
+		<td>baz]</td>
 	</tr>
 	<tr>
 		<td>foo</td>
 		<td>bar</td>
 		<td>baz</td>
-		<td>foo</td>
+		<td>[foo</td>
 		<td>bar</td>
-		<td>baz</td>
+		<td>baz]</td>
 	</tr>
 	</tbody>
 </table>
