--- a/tests/plugins/a11yhelp/manual/commandstable.html
+++ b/tests/plugins/a11yhelp/manual/commandstable.html
@@ -3,43 +3,41 @@
     <p>I&#39;m an instance of <a href="http://ckeditor.com">CKEditor</a>.</p>
 </textarea>
 
-<button onclick="addCommands();" >Re-create editor</button>
+<textarea id="editor2">
+    <h1>Hello world!</h1>
+    <p>I&#39;m an instance of <a href="http://ckeditor.com">CKEditor</a>.</p>
+</textarea>
+
 
 <script>
 	if ( bender.tools.env.mobile ) {
 		bender.ignore();
 	}
+	CKEDITOR.replace( 'editor1' )
 
-	var editor = CKEDITOR.replace( 'editor1' );
+	var editor = CKEDITOR.replace( 'editor2');
+	editor.addCommand( 'extra1', {
+		exec: function() {},
+		label: 'Extra command 1'
+	} );
+	editor.addCommand( 'extra2', {
+		exec: function() {},
+		label: 'Extra command 2',
+		description: 'This command contains some description.'
+	} );
+	editor.addCommand( 'extra3', {
+		exec: function() {},
+		label: 'Extra command 3',
+	} );
 
+	editor.setKeystroke( CKEDITOR.SHIFT + CKEDITOR.ALT + 65, 'extra1' );
+	editor.setKeystroke( CKEDITOR.SHIFT + CKEDITOR.ALT + 66, 'extra2' );
+	editor.setKeystroke( CKEDITOR.SHIFT + CKEDITOR.ALT + 67, 'extra3' );
 
-	function addCommands() {
-		editor.destroy();
-		editor =CKEDITOR.replace( 'editor1' );
-
-		editor.addCommand( 'extra1', {
-			exec: function() {},
-			label: 'Extra command 1'
-		} );
-		editor.addCommand( 'extra2', {
-			exec: function() {},
-			label: 'Extra command 2',
-			description: 'This command contains some description.'
-		} );
-		editor.addCommand( 'extra3', {
-			exec: function() {},
-			label: 'Extra command 3',
-		} );
-
-		editor.setKeystroke( CKEDITOR.SHIFT + CKEDITOR.ALT + 65, 'extra1' );
-		editor.setKeystroke( CKEDITOR.SHIFT + CKEDITOR.ALT + 66, 'extra2' );
-		editor.setKeystroke( CKEDITOR.SHIFT + CKEDITOR.ALT + 67, 'extra3' );
-
-		editor.on( 'keystrokeEntry', function( evt ) {
-			if ( evt.data.commandName === 'extra3' ) {
-				evt.data.label = 'This label was modified by event.'
-			}
-		} );
-	}
+	editor.on( 'keystrokeEntry', function( evt ) {
+		if ( evt.data.commandName === 'extra3' ) {
+			evt.data.label = 'This label was modified by event.'
+		}
+	} );
 </script>
 
